--- a/external/libxmlsec/xmlsec1-vc.patch.1
+++ b/external/libxmlsec/xmlsec1-vc.patch.1
@@ -1,14 +1,14 @@
-From 8586bb027cde6713a9048472917c75095e186643 Mon Sep 17 00:00:00 2001
+From c821fea172b4ffdb60f65867862dd48049589ea6 Mon Sep 17 00:00:00 2001
 From: Miklos Vajna <vmiklos@collabora.co.uk>
 Date: Fri, 4 Mar 2016 16:12:29 +0100
 Subject: [PATCH] xmlsec1-vc.patch
 
 ---
- win32/Makefile.msvc | 12 ++++++++++--
- 1 file changed, 10 insertions(+), 2 deletions(-)
+ win32/Makefile.msvc | 10 +++++++++-
+ 1 file changed, 9 insertions(+), 1 deletion(-)
 
 diff --git a/win32/Makefile.msvc b/win32/Makefile.msvc
-index 978336e..a474592 100644
+index bbc661a..a474592 100644
 --- a/win32/Makefile.msvc
 +++ b/win32/Makefile.msvc
 @@ -311,6 +311,10 @@ CFLAGS 			= $(CFLAGS) /D PACKAGE=\"$(XMLSEC_NAME)\"
