--- a/extras/source/truetype/symbol/README
+++ b/extras/source/truetype/symbol/README
@@ -9,14 +9,11 @@ important so that when two versions of the font are installed, e.g.  one
 bundled inside the office installation, and one already installed on the system
 that the most recent font can be detected and favoured.
 
-Bumping the font version is easiest done manually by bumping the two places in
+Bumping the font version is easiest done manually by bumping the the place in
 the .sfd where the version is mentioned, e.g.
 
 -Version: 102.3
 +Version: 102.4
-
--LangName: 1033 "" "" "Regular" "OpenSymbol" "" "Version 102.3"
-+LangName: 1033 "" "" "Regular" "OpenSymbol" "" "Version 102.4"
 
 The glyph names in the font should follow Adobe Glyph list for new fonts
 (https://github.com/adobe-type-tools/agl-aglfn) or just the uniXXXX scheme
