--- a/extras/source/truetype/symbol/README
+++ b/extras/source/truetype/symbol/README
@@ -9,7 +9,7 @@ important so that when two versions of the font are installed, e.g.  one
 bundled inside the office installation, and one already installed on the system
 that the most recent font can be detected and favoured.
 
-Bumping the font version is easiest done manually by bumping the the place in
+Bumping the font version is easiest done manually by bumping the place in
 the .sfd where the version is mentioned, e.g.
 
 -Version: 102.3
@@ -21,5 +21,5 @@ The glyph names in the font should follow Adobe Glyph list for new fonts
 
 Fragments of OpenSymbol are mapped internally to a number of other
 fonts for interoperability purposes. See
-unotools/source/misc/fontcvt.cxx pwrt.  the StarSymbol conversion
+unotools/source/misc/fontcvt.cxx pwrt, the StarSymbol conversion
 tables.
