tdf#101789 work around DYLD_LIBRARY_PATH limitations on newer MacOS X
Change-Id: I6e3cbff1ec7a75e896ba5bafb9d1fbccc3bc8909

--- a/external/firebird/firebird-macosx.patch.1
+++ b/external/firebird/firebird-macosx.patch.1
@@ -110,11 +110,15 @@
  #elif defined(HPUX)
  const char* const inTemplate = "libicui18n.sl.%s";
  const char* const ucTemplate = "libicuuc.sl.%s";
-@@ -353,6 +353,12 @@
+@@ -353,6 +353,16 @@
  		s.printf("%d%d", majorVersion, minorVersion);
  
  	filename.printf(templateName, s.c_str());
-+	const char * const envpath = getenv("LIBREOFFICE_FIREBIRD_LIB");
++	const char * envpath = getenv("LIBREOFFICE_FIREBIRD_LIB");
++	if(envpath == nullptr)
++	{
++		envpath = getenv("LIBREOFFICE_ICU_LIB");
++	}
 +	if(envpath != nullptr)
 +	{
 +		s = filename.c_str();
